<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_raffle_entry"
            android:icon="@drawable/ic_raffle_ticket_24"
            android:visible="true"
            android:title="@string/menu_raffle_entry"/>


        <item
            android:id="@+id/nav_promos"
            android:icon="@drawable/ic_baseline_promo_24"
            android:title="@string/menu_promos" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_event_note_24"
            android:visible="false"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_item_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:visible="false"
            android:title="@string/menu_item_cart" />
        <item
            android:id="@+id/nav_applyLoan"
            android:icon="@drawable/ic_baseline_loan_24"
            android:visible="true"
            android:title="@string/menu_apply_loan" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:visible="false"
            android:title="@string/menu_purchases" />

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_baseline_heart_24"
            android:visible="false"
            android:title="@string/menu_wishlist" />

        <item android:title="@string/menu_product_inquiry"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_info_24"
            android:id="@+id/product_inquiry_expanded">

            <menu>
                <item
                    android:id="@+id/nav_product_inquiry"
                    android:icon="@drawable/ic_baseline_inquiry_24"
                    android:title="Inquiry" />

                <item
                    android:id="@+id/nav_product_inquiry_history"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="History" />
            </menu>
        </item>

        <item android:title="@string/menu_subtitle_gcard">
            <menu>
                <item
                    android:id="@+id/nav_my_gcard"
                    android:icon="@drawable/ic_settings_card_24"
                    android:title="@string/menu_my_gcard" />

                <item
                    android:id="@+id/nav_scan_qrcode"
                    android:icon="@drawable/ic_baseline_qr_code_scanner_24"
                    android:title="@string/menu_scan_gcard" />


                <item
                    android:id="@+id/nav_redeemables"
                    android:icon="@drawable/ic_baseline_gift_24"
                    android:title="@string/menu_redeemables" />

                <item
                    android:id="@+id/nav_gcard_orders"
                    android:icon="@drawable/ic_baseline_package_24"
                    android:title="@string/menu_gcard_orders" />

                <item
                    android:id="@+id/nav_gcard_transactions"
                    android:icon="@drawable/ic_baseline_assignment_24"
                    android:title="@string/menu_gcard_transactions" />

                <item
                    android:id="@+id/nav_pre_termination"
                    android:icon="@drawable/ic_baseline_assignment_24"
                    android:title="@string/menu_pre_termination" />

            </menu>

        </item>

        <item android:title="Account">
            <menu>
                <item
                    android:id="@+id/nav_account_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/menu_account_settings" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/menu_logout" />
            </menu>
        </item>

        <item android:title="Services">
            <menu>

                <item
                    android:id="@+id/nav_customer_service"
                    android:icon="@drawable/ic_baseline_headset_mic_24"
                    android:title="@string/menu_customer_service" />

                <item
                    android:id="@+id/nav_find_us"
                    android:icon="@drawable/ic_baseline_location_24"
                    android:title="@string/menu_find_us" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_about" />
            </menu>

        </item>

    </group>

</menu>