<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/GuanzonPanalo.Theme"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/custom_corner_box2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_dialogTitle"
            style="@style/TextStyleLabel.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guanzon_panalo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTransaction"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblInfo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            style="@style/TextInputLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomDropDownTilStyle">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/tie_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/tie_civil_stat"
                style="@style/DropdownStyleTheme"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblReferenceNo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblInfo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            style="@style/TextInputLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_referenceNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_referenceNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="60"
                android:digits="@string/free_text_restriction"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/tie_firstname" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblGenerateQrCode"
            android:layout_marginVertical="10dp"
            style="@style/ButtonStyle.Orange.Medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblClose"
            android:layout_marginBottom="10dp"
            style="@style/ButtonStyle.Orange.Medium"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>